--- a/.envrc.dist
+++ b/.envrc.dist
@@ -6,8 +6,9 @@
 export ENVRC_VERSION="1.0"
 
 # Change to your CtA or Code repo :)
-CODE_URL="http://github.com/palladius/gcp-cache"
-
+export CODE_URL="http://github.com/palladius/gcp-cache"
+export APP_NAME="🌩 GCP Cache (dist)"
+export APP_DESCRIPTION="A lightning-fast cache for your GCP Orgs, Folders, Projects and GCP entities"
 
 #### v1.1 2022-12-XX ####
 
