--- a/test/fixtures/folders.yml
+++ b/test/fixtures/folders.yml
@@ -9,7 +9,8 @@ one:
   domain: MyString
   directory_customer_id: MyString
   lifecycle_state: MyString
-  gcp_creation_time: 2022-12-28 07:32:36
+  gcp_creation_time: 2022-12-28 08:49:49
+  type: 
 
 two:
   name: MyString
@@ -20,4 +21,5 @@ two:
   domain: MyString
   directory_customer_id: MyString
   lifecycle_state: MyString
-  gcp_creation_time: 2022-12-28 07:32:36
+  gcp_creation_time: 2022-12-28 08:49:49
+  type: 
