--- a/test/fixtures/folders.yml
+++ b/test/fixtures/folders.yml
@@ -9,8 +9,8 @@ one:
   domain: MyString
   directory_customer_id: MyString
   lifecycle_state: MyString
-  gcp_creation_time: 2022-12-28 08:49:49
-  type: 
+  gcp_creation_time: 2022-12-28 09:05:46
+  frog_type: MyString
 
 two:
   name: MyString
@@ -21,5 +21,5 @@ two:
   domain: MyString
   directory_customer_id: MyString
   lifecycle_state: MyString
-  gcp_creation_time: 2022-12-28 08:49:49
-  type: 
+  gcp_creation_time: 2022-12-28 09:05:46
+  frog_type: MyString
