--- a/.envrc.dist
+++ b/.envrc.dist
@@ -18,5 +18,11 @@ export ORG_ICON='🗂'
 # Set this to make the BQ query work for you :) and get all Projects and stuff from your BQ export (see README.)
 export ASSET_INVENTORY_TABLES='my-project.my-dataset.my_tables_'
 export ORGANIZATION_ID="1234567890"
+# A project where to use gcloud to extract ALL assets you're interested to.
+# When it works, will move to  the iteration :) IO need numerical part for immediate use 
+# of Asset aPI.
+export PROJECT_NUMBER="123456789012"
+export INTERESTING_PROJECT_NUMBERS="123456789012,1234567890123,12345678901234"
+
 #### v1.1 2022-12-XX ####
 
