--- a/test/fixtures/labels.yml
+++ b/test/fixtures/labels.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  gcp_key: test-env
+  gcp_k: test-env
   gcp_value: test-dev
 
 two:
-  gcp_key: test-env
+  gcp_k: test-env
   gcp_value: test-prod
 
 riccardo:
-  gcp_key: find-me-in
+  gcp_k: find-me-in
   gcp_value: test-fixtures-labels.yml
+#  labellable_id: 1
+#  labellable_type: MyString
