--- a/.envrc.dist
+++ b/.envrc.dist
@@ -10,6 +10,8 @@ export CODE_URL="http://github.com/palladius/gcp-cache"
 export APP_NAME="🌩 GCP Cache (dist)"
 export APP_DESCRIPTION="A lightning-fast cache for your GCP Orgs, Folders, Projects and GCP entities"
 export ORG_FOLDER_PROJECTS_GRAPH_DIR="./db/fixtures/org-folder-projects-graph/projects/"
+# If you installed and ran this amazing script Riccardo has created, just update the folder: https://github.com/palladius/org-folder-projects-graph 
+export ORG_FOLDER_PROJECTS_GRAPH_EXTERNAL_FOLDER="~/path/to/org-folder-projects-graph-deleteme/" 
 
 export PROJECT_ICON='🍕'
 export FOLDER_ICON='📂'
