--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ db/fixtures/bq-exports/assets-export20221227-190529.json
 .git-privatize
 db/fixtures/gcloud/organizations.json
 db/fixtures/gcloud/projects.json
+.DbSeedMagicSignature.yaml
