--- a/.envrc.dist
+++ b/.envrc.dist
@@ -3,7 +3,7 @@
 
 #### v1.0 2022-12-27 ####
 # Do not change this. It will helpmnyou catch up with latest changes :)
-export ENVRC_VERSION="1.0"
+export ENVRC_VERSION="1.2"
 
 # Change to your CtA or Code repo :)
 export CODE_URL="http://github.com/palladius/gcp-cache"
@@ -27,4 +27,8 @@ export PROJECT_NUMBER="123456789012"
 export INTERESTING_PROJECT_NUMBERS="123456789012,1234567890123,12345678901234"
 
 #### v1.1 2022-12-29 ####
+
+
+#### v1.2 2023-04-13 ####
+export PROJECT_ID="the-same-as-above-but-in-string"
 
