productionizing PG ... to come

--- a/.envrc.dist
+++ b/.envrc.dist
@@ -27,8 +27,8 @@ export PROJECT_NUMBER="123456789012"
 export INTERESTING_PROJECT_NUMBERS="123456789012,1234567890123,12345678901234"
 
 #### v1.1 2022-12-29 ####
-
+# See https://guides.rubyonrails.org/v5.1/configuring.html
+export DATABASE_URL="TODO"
 
 #### v1.2 2023-04-13 ####
 export PROJECT_ID="the-same-as-above-but-in-string"
-
